Fixes horizontal scrollbar issue in Firefox (#236)
closes #235

--- a/src/layout/CommunitySection/CommunitySection.scss
+++ b/src/layout/CommunitySection/CommunitySection.scss
@@ -61,6 +61,7 @@
 		0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%),
 		0 41.1623px 41.1623px hsl(0, 0%, 0%, 7%),
 		0 96.0454px 89.1851px hsl(0, 0%, 0%, 9%);
+		overflow: hidden;
 
 		.rainbow-background {
 			position: absolute;
